--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,7 @@
 @layer components {
   button {
     @apply px-4 py-2 bg-cream text-primary rounded-lg border border-primary
-    transition hover:-translate-x-0.5 hover:-translate-y-0.5
-    hover:shadow-[4px_4px_0_0_rgb(var(--color-primary))];
+    transition md:hover:-translate-x-0.5 md:hover:-translate-y-0.5
+    md:hover:shadow-[4px_4px_0_0_rgb(var(--color-primary))];
   }
 }
